# StaticJSON

./: .cmake-format.py  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  _clang-format  autojsoncxx.py  code_template  do_test.sh  format.sh  mkdocs.yml  type_check.py
.github/workflows/: ccpp.yaml
autojsoncxx/: autojsoncxx.hpp  autojsoncxx.py  userdef.hpp  userdef.json
autojsoncxx/examples/failure/: duplicate_key_user.json
benchmark/: CMakeLists.txt  main.cpp
cmake/: staticjson-config.cmake.in
docs/: index.md  tutorial.md
docs/user_guide/: convenience_functions.md  definition_file_syntax.md
examples/: user.def  user.json  userdef.json
examples/failure/: invalid_enum.json  tensor.json  unknown_field.json
examples/success/: tensor.json  user_array.json  user_map.json
include/autojsoncxx/: array_types.hpp  autojsoncxx.hpp  base.hpp  boost_types.hpp  dom.hpp  error.hpp  from_json.hpp  map_types.hpp  nullable_types.hpp  to_json.hpp  tuple_types.hpp  utility.hpp
include/staticjson/: arena.hpp  array_types.hpp  base.hpp  basic.hpp  boost_types.hpp  document.hpp  dom.hpp  enum.hpp  error.hpp  from_json.hpp  io.hpp  map_types.hpp  nullable_types.hpp  optional_support.hpp  primitive_types.hpp  staticjson.hpp  stl_types.hpp  to_json.hpp  tuple_types.hpp  utility.hpp
src/: basic.cpp  staticjson.cpp
test/: CMakeLists.txt  Makefile  main.cpp  myarray.hpp  sample_output.html  test.cpp  test_arena.cpp  test_autojsoncxx.cpp  test_basic.cpp  test_example.cpp  test_instantiation.cpp  test_integration.cpp  test_long.cpp  test_memory_usage.cpp  test_schema.py  test_tensor.cpp
test/msvc10_test/: msvc_test.vcxproj
