CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT (test_staticjson CXX)
include(CheckCXXCompilerFlag)

if (NOT MSVC)
    CHECK_CXX_COMPILER_FLAG(-std=c++14 CXX14_COMPILER)
    if ("${CXX14_COMPILER}" EQUAL "1")
        add_compile_options(-std=c++14)
        add_definitions(-DSTATICJSON_EXPERIMENTAL_OPTIONAL)
    else()
        add_compile_options(-std=c++11)
    endif()
    add_compile_options(-fno-rtti -Wall -Wextra -pedantic -g)
endif()

if (NOT CMAKE_BUILD_TYPE)
	SET (CMAKE_BUILD_TYPE Debug)
endif()

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../include)
SET(TARGET test_staticjson)
FILE (GLOB SOURCES ../include/staticjson/*.hpp ../src/*.cpp *.cpp)
ADD_EXECUTABLE(${TARGET} ${SOURCES})

enable_testing()
add_test(NAME ${TARGET} COMMAND ${TARGET} WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
